--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dropdown</title>
+    <title>Palermo Carousel</title>
 </head>
 <body>
     <nav>
@@ -69,11 +69,11 @@
         <img id="prev-slide-btn" class="move-slide-btn" src="assets/arrow_back_ios_64dp_999999_FILL0_wght400_GRAD0_opsz48.svg">
         <div id="frame-div">
             <div id="wide-div">
-                <img id="first-slide" class="first-frame" src="assets/Kiisud.jpg" width="960px" height="640px" alt="">
-                <img id="second-slide" class="hidden" src="assets/Liceo classico.jpg" width="960px" height="640px" alt="">
-                <img id="third-slide" class="hidden" src="assets/Palermo ooperiteater.jpg" width="960px" height="640px" alt="">
-                <img id="fourth-slide" class="hidden" src="assets/Punased kuplid.jpg" width="960px" height="640px" alt="">
-                <img id="fifth-slide" class="hidden" src="assets/Tänav.jpg" width="960px" height="640px" alt="">
+                <img id="first-slide" class="slide first-slide" src="assets/Kiisud.jpg" width="960px" height="640px" alt="">
+                <img id="second-slide" class="slide hidden" src="assets/Liceo classico.jpg" width="960px" height="640px" alt="">
+                <img id="third-slide" class="slide hidden" src="assets/Palermo ooperiteater.jpg" width="960px" height="640px" alt="">
+                <img id="fourth-slide" class="slide hidden" src="assets/Punased kuplid.jpg" width="960px" height="640px" alt="">
+                <img id="fifth-slide" class="slide hidden" src="assets/Tänav.jpg" width="960px" height="640px" alt="">
             </div>
         </div>
         <img id="next-slide-btn" class="move-slide-btn" src="assets/arrow_forward_ios_64dp_999999_FILL0_wght400_GRAD0_opsz48.svg">
